kubernetes/kyverno-policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged containers have full access to the host's devices and kernel
      capabilities. This policy blocks any container that sets
      securityContext.privileged to true.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: deny-privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privileged containers are not allowed. Set
          spec.containers[*].securityContext.privileged to false.
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
    - name: deny-privileged-init-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privileged init containers are not allowed. Set
          spec.initContainers[*].securityContext.privileged to false.
        pattern:
          spec:
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
