kubernetes/kyverno-policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Running containers as root grants unnecessary privileges that can be
      exploited in a container breakout. This policy requires that pods set
      runAsNonRoot to true and containers do not set allowPrivilegeEscalation
      to true.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Pods must run as non-root. Set spec.securityContext.runAsNonRoot
          to true, or set it on each container's securityContext.
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
              containers:
                - =(securityContext):
                    =(runAsNonRoot): true
          - spec:
              containers:
                - securityContext:
                    runAsNonRoot: true
    - name: deny-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privilege escalation is not allowed. Set
          spec.containers[*].securityContext.allowPrivilegeEscalation to false.
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
